samples/_failures_safe/1761407014_af512b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d19ddc9.c: In function ‘main’:
./samples/SAFE/__tmp_9d19ddc9.c:173:11: error: expected ‘;’ at end of input
  173 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_9d19ddc9.c:173:5: error: expected declaration or statement at end of input
  173 |     printf
      |     ^~~~~~
